src/test/ui/reachable/expr_return.stderr
error: unreachable expression
  --> $DIR/expr_return.rs:10:22
   |
LL |     let x = {return {return {return;}}};
   |                      ^^^^^^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/expr_return.rs:4:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^
note: any code following this expression is unreachable
  --> $DIR/expr_return.rs:10:30
   |
LL |     let x = {return {return {return;}}};
   |                              ^^^^^^

error: aborting due to previous error

